etg_derive/tests/cases/02_fail_for_struct.rs
#[derive(etg_derive::Tags)]
struct S;

fn main() {}
